@@ -321,10 +321,35 @@ class ContextClassloaderTest(unittest.TestCase):
         self.assertEquals(len(called), 1)
 
 
+class SettingJavaClassNameTest(unittest.TestCase):
+    def test_setting_name(self):
+        class Fixedname(Runnable):
+            __javaname__ = 'name.set.in.Python'
+            def run(self):
+                pass
+        self.assertEquals('name.set.in.Python', Fixedname().getClass().name)
+        try:
+            class NumberPackageName(Runnable):
+                __javaname__ = 'ok.7.ok'
+                def run(self):
+                    pass
+            self.fail("Shouldn't be able to set a package name that starts with a digit")
+        except TypeError:
+            pass
+        try:
+            class LiteralPackageName(Runnable):
+                __javaname__ = 'ok.true.ok'
+                def run(self):
+                    pass
+            self.fail("Shouldn't be able to use a Java literal as a package name")
+        except TypeError:
+            pass
+
 def test_main():
     test_support.run_unittest(InterfaceTest,
             TableModelTest,
             AutoSuperTest,
             PythonSubclassesTest,
             AbstractOnSyspathTest,
-            ContextClassloaderTest)
+            ContextClassloaderTest,
+            SettingJavaClassNameTest)
